fix artist lottery info image alignment

--- a/src/projects/artist-call-lottery/styles.css
+++ b/src/projects/artist-call-lottery/styles.css
@@ -322,6 +322,9 @@
 }
 
 .acl-info-card {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   height: fit-content;
 }
 
